--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-name: My Site
+title: My Site
+description: basic learning site for Codecademy
 remote_theme: pages-themes/modernist@v0.2.0
 plugins:
 - jekyll-remote-theme 
